# yaml-language-server: $schema=https://json.schemastore.org/pyproject.json
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-py-test"
version = "0.0.0"
description = "Manual test project for the dbt-py package."
authors = [{name = "billwallis"}]
requires-python = ">=3.11"
dynamic = ["dependencies"]


[tool.setuptools]
dynamic.dependencies = {file = ["requirements.txt"]}
py-modules = [
    "custom_module",
]
packages = [
    "custom_package",
    "another_custom_package",
]


[tool.dbt-py]
packages = [
    {name = "math"},  # stdlib package
    {name = "dbt_py"},  # installed package
    {name = "custom_module"},  # custom module
    {name = "custom_package"},  # custom package
    {name = "another_package", path = "another_custom_package"},  # custom package with path
]
